# Funding-Rate-Monitoring-UI

./: .gitignore  Cargo.toml  WEBSOCKET_TROUBLESHOOTING.md
examples/: Req.rs  UI.rs  Ws.rs  Ws2.rs  WsLighter.rs
src/: main.rs
src/app/: mod.rs
src/config/: mod.rs
src/data/: coin_data.rs  mod.rs
src/request/: client.rs  mod.rs
src/ui/: app.rs  colors.rs  mod.rs
src/websocket/: client.rs  mod.rs
